[gd_scene load_steps=25 format=2]

[ext_resource path="res://Src/Levels/Luna.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/misc/Pickup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/Levels/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Textures/Planets/Barren.png" type="Texture" id=4]
[ext_resource path="res://Src/Props/WormholeEnd.gd" type="Script" id=5]
[ext_resource path="res://Assets/Textures/Layer2.png" type="Texture" id=7]
[ext_resource path="res://Src/misc/Warning.tscn" type="PackedScene" id=8]
[ext_resource path="res://Src/Props/Wormhole.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Menu/panel-1.png" type="Texture" id=10]
[ext_resource path="res://Src/Props/Asteroid Field.gd" type="Script" id=11]
[ext_resource path="res://Src/Levels/Wormholes.gd" type="Script" id=13]
[ext_resource path="res://Src/Levels/WormholeExit.gd" type="Script" id=15]
[ext_resource path="res://Assets/Textures/Planets/Barren1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Textures/Planets/Barren2.png" type="Texture" id=19]
[ext_resource path="res://Assets/Textures/Planets/Barren3.png" type="Texture" id=20]
[ext_resource path="res://Src/Levels/Planet.gd" type="Script" id=21]
[ext_resource path="res://Src/Levels/Level 1.gd" type="Script" id=22]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float angle_degrees;
uniform float strength : hint_range(0,1, 0.0001);

//	Directional Blur Shader

vec4 dirBlur(sampler2D sampler, vec2 uv, vec2 dir) {
	// Change the number of samples for better quality at the cost of performance
	int samples = 30;
	vec4 l = vec4(0);
	float delta = 1.0 / float(samples);
	for(float i = -1.0; i <= 1.0; i += delta)
    {
        l += texture(sampler, uv - vec2(dir.x * i, dir.y * i)).rgba;
    }
	return vec4(l*delta*0.5);
}


void fragment(){
	vec2 blur_vector = vec2(cos(radians(angle_degrees)),sin(radians(angle_degrees)))*strength;
	COLOR=dirBlur(TEXTURE, UV, blur_vector);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/angle_degrees = 0.0
shader_param/strength = 0.002

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 24.5

[sub_resource type="CircleShape2D" id=5]
radius = 40.0

[sub_resource type="CircleShape2D" id=6]
radius = 40.0

[sub_resource type="CircleShape2D" id=7]
radius = 40.0

[node name="Level2" type="Node2D"]
script = ExtResource( 22 )

[node name="Luna" parent="." instance=ExtResource( 1 )]
position = Vector2( 24.1071, 812.303 )

[node name="AnimatedSprite" parent="Luna/RigidBody2D/CanvasLayer/PUD/HBoxContainer/TextureRect" index="0"]
frame = 4

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="ForegroundStars" type="ParallaxBackground" parent="Background"]
follow_viewport_scale = 2.0
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ForegroundStars"]
motion_scale = Vector2( 0.75, 0.75 )
motion_mirroring = Vector2( 960, 540 )

[node name="Sprite" type="TextureRect" parent="Background/ForegroundStars/ParallaxLayer"]
texture = ExtResource( 7 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForergroundStars" type="ParallaxBackground" parent="Background"]
layer = -50
follow_viewport_scale = 3.0
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ForergroundStars"]
motion_scale = Vector2( 1.2, 1.2 )
motion_mirroring = Vector2( 960, 540 )

[node name="Sprite" type="TextureRect" parent="Background/ForergroundStars/ParallaxLayer"]
modulate = Color( 0.439216, 0.439216, 0.439216, 1 )
material = SubResource( 2 )
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 7 )
stretch_mode = 2
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="Background"]

[node name="Asteroid Field" type="Node2D" parent="."]
position = Vector2( -12.6992, -444.472 )
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="Asteroid Field"]
margin_left = -966.0
margin_top = -504.0
margin_right = 6463.0
margin_bottom = -59.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Asteroid Field"]
margin_left = -921.0
margin_top = 1776.0
margin_right = 6659.0
margin_bottom = 2221.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Asteroid Field"]
margin_left = -1008.0
margin_top = -544.0
margin_right = -602.0
margin_bottom = 2165.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Asteroid Field"]
margin_left = 1761.0
margin_top = -701.0
margin_right = 2493.0
margin_bottom = 2353.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Asteroid Field"]
margin_left = 5044.77
margin_top = -503.341
margin_right = 5450.77
margin_bottom = 2193.66
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pickups" type="YSort" parent="."]
show_behind_parent = true
position = Vector2( 1819.89, 649.974 )
scale = Vector2( 0.247725, 0.428423 )
z_as_relative = false
sort_enabled = false

[node name="Pickup" parent="Pickups" instance=ExtResource( 2 )]
position = Vector2( 12288.4, -1879.16 )
scale = Vector2( 4.03673, 2.33414 )

[node name="Barren Planet" type="Node2D" parent="."]
position = Vector2( 4718.09, -239.549 )
script = ExtResource( 21 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Barren Planet"]
position = Vector2( 0.00388336, 0.035675 )
frames = SubResource( 3 )
playing = true

[node name="RigidBody2D" type="RigidBody2D" parent="Barren Planet"]
position = Vector2( 0.0640106, -0.0138779 )
mode = 1
mass = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barren Planet/RigidBody2D"]
position = Vector2( -0.0258179, -0.0373535 )
shape = SubResource( 4 )

[node name="Wormholes" type="Node2D" parent="."]
position = Vector2( -2529.65, -527.267 )

[node name="Level End" type="Area2D" parent="Wormholes" groups=[
"Wormhole",
]]
position = Vector2( 7692.64, 691.608 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wormholes/Level End"]
shape = SubResource( 5 )

[node name="Level End" parent="Wormholes/Level End" instance=ExtResource( 9 )]
position = Vector2( -0.114258, -0.366455 )
rotation = -1.82815

[node name="Warning" parent="Wormholes/Level End" instance=ExtResource( 8 )]
position = Vector2( -0.114258, -0.366455 )
rotation = -1.82815
scale = Vector2( 1, 1 )

[node name="WormholeEnter" type="Area2D" parent="Wormholes" groups=[
"Wormhole",
]]
position = Vector2( 4067.62, 1117.84 )
script = ExtResource( 13 )
exitID = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wormholes/WormholeEnter"]
shape = SubResource( 6 )

[node name="WormholeEnter" parent="Wormholes/WormholeEnter" instance=ExtResource( 9 )]
position = Vector2( -0.114258, -0.366455 )
rotation = -1.82815

[node name="Warning" parent="Wormholes/WormholeEnter" instance=ExtResource( 8 )]
position = Vector2( -0.114258, -0.366455 )
scale = Vector2( 1, 1 )

[node name="WormholeExit" type="Area2D" parent="Wormholes"]
position = Vector2( 2532.67, 1422.72 )
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wormholes/WormholeExit"]
shape = SubResource( 7 )

[node name="WormholeExit" parent="Wormholes/WormholeExit" instance=ExtResource( 9 )]
position = Vector2( -0.114258, -0.366455 )
rotation = -1.82815

[node name="WormholeExit2" type="Area2D" parent="Wormholes"]
position = Vector2( 6931.35, 1729.69 )
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wormholes/WormholeExit2"]
shape = SubResource( 7 )

[node name="WormholeExit" parent="Wormholes/WormholeExit2" instance=ExtResource( 9 )]
position = Vector2( -0.114258, -0.366455 )
rotation = -1.82815
[connection signal="body_entered" from="Wormholes/Level End" to="Wormholes/Level End" method="_on_Level_End_body_entered"]
[connection signal="body_entered" from="Wormholes/WormholeEnter" to="Wormholes/WormholeEnter" method="_on_WormholeEnter_body_entered"]
[connection signal="body_entered" from="Wormholes/WormholeExit" to="Wormholes/WormholeEnter" method="_on_WormholeExit_body_entered"]
[connection signal="body_entered" from="Wormholes/WormholeExit2" to="Wormholes/WormholeEnter" method="_on_WormholeExit2_body_entered"]

[editable path="Luna"]
